--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-14thval",
   "version": "0.1.0",
+  "homepage": "https://artcevvv.github.io/ValentinesDay",
   "private": true,
   "dependencies": {
     "canvas-confetti": "^1.9.3",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
